// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with children and no parentId render correctly 1`] = `
<div
  style={
    Object {
      "marginBottom": 20,
    }
  }
>
  <h1
    className="MuiTypography-root-35 MuiTypography-headline-40"
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    foo-name
  </h1>
  <div
    className="MuiPaper-root-62 MuiPaper-elevation2-66 MuiPaper-rounded-63"
  >
    <label
      className="MuiFormControlLabel-root-1"
      style={
        Object {
          "margin": 0,
        }
      }
    >
      <span
        className="MuiButtonBase-root-19 MuiIconButton-root-13 MuiSwitchBase-root-9 MuiCheckbox-root-4 MuiCheckbox-colorSecondary-8"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role={undefined}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-18"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-22"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
          <input
            checked={false}
            className="MuiSwitchBase-input-12"
            disabled={undefined}
            id={undefined}
            name="category-root-321"
            onChange={[Function]}
            tabIndex={undefined}
            type="checkbox"
            value="foo-children"
          />
        </span>
        <span
          className="MuiTouchRipple-root-28"
        />
      </span>
      <span
        className="MuiTypography-root-35 MuiTypography-body1-44 MuiFormControlLabel-label-3"
      >
        foo-children
      </span>
    </label>
  </div>
</div>
`;

exports[`with children render correctly 1`] = `
<div
  className="MuiPaper-root-62 MuiPaper-elevation1-65 MuiExpansionPanel-root-59"
  style={
    Object {
      "flex": 1,
      "width": "100%",
    }
  }
>
  <div
    aria-expanded={false}
    className="MuiButtonBase-root-19 MuiExpansionPanelSummary-root-89"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "border": "1px solid rgba(0,0,0,.1)",
      }
    }
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-93"
    >
      <p
        className="MuiTypography-root-35 MuiTypography-body1-44"
      >
        foo-name
      </p>
    </div>
    <div
      aria-hidden="true"
      className="MuiButtonBase-root-19 MuiIconButton-root-13 MuiExpansionPanelSummary-expandIcon-94"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-18"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-22"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </g>
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-28"
      />
    </div>
  </div>
  <div
    aria-hidden="true"
    className="MuiCollapse-container-95"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-97"
    >
      <div
        className="MuiCollapse-wrapperInner-98"
      >
        <div
          className="MuiExpansionPanelDetails-root-99"
          style={
            Object {
              "display": "inline",
              "padding": 0,
            }
          }
        >
          <label
            className="MuiFormControlLabel-root-1"
            style={
              Object {
                "margin": 0,
              }
            }
          >
            <span
              className="MuiButtonBase-root-19 MuiIconButton-root-13 MuiSwitchBase-root-9 MuiCheckbox-root-4 MuiCheckbox-colorSecondary-8"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role={undefined}
              tabIndex={null}
            >
              <span
                className="MuiIconButton-label-18"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-22"
                  color={undefined}
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
                <input
                  checked={false}
                  className="MuiSwitchBase-input-12"
                  disabled={undefined}
                  id={undefined}
                  name="category-root-321"
                  onChange={[Function]}
                  tabIndex={undefined}
                  type="checkbox"
                  value="foo-children"
                />
              </span>
              <span
                className="MuiTouchRipple-root-28"
              />
            </span>
            <span
              className="MuiTypography-root-35 MuiTypography-body1-44 MuiFormControlLabel-label-3"
            >
              foo-children
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`with no children with component as destroy and filterAction as select render correctly 1`] = `
<label
  className="MuiFormControlLabel-root-1"
  style={
    Object {
      "margin": 0,
    }
  }
>
  <span
    className="MuiButtonBase-root-19 MuiIconButton-root-13 MuiSwitchBase-root-9 MuiCheckbox-root-4 MuiCheckbox-colorSecondary-8"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role={undefined}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label-18"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-22"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        checked={false}
        className="MuiSwitchBase-input-12"
        disabled={undefined}
        id={undefined}
        name="category-root-321"
        onChange={[Function]}
        tabIndex={undefined}
        type="checkbox"
        value="foo-name"
      />
    </span>
    <span
      className="MuiTouchRipple-root-28"
    />
  </span>
  <span
    className="MuiTypography-root-35 MuiTypography-body1-44 MuiFormControlLabel-label-3"
  >
    foo-name
  </span>
</label>
`;

exports[`with no children with component as destroy and filterAction as select with filterAction as unselect render correctly 1`] = `
<label
  className="MuiFormControlLabel-root-1"
  style={
    Object {
      "margin": 0,
    }
  }
>
  <span
    className="MuiButtonBase-root-19 MuiIconButton-root-13 MuiSwitchBase-root-9 MuiCheckbox-root-4 MuiCheckbox-colorSecondary-8 MuiSwitchBase-checked-10 MuiCheckbox-checked-5"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role={undefined}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label-18"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-22"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
      <input
        checked={true}
        className="MuiSwitchBase-input-12"
        disabled={undefined}
        id={undefined}
        name="category-root-321"
        onChange={[Function]}
        tabIndex={undefined}
        type="checkbox"
        value="foo-name"
      />
    </span>
    <span
      className="MuiTouchRipple-root-28"
    />
  </span>
  <span
    className="MuiTypography-root-35 MuiTypography-body1-44 MuiFormControlLabel-label-3"
  >
    foo-name
  </span>
</label>
`;
